# cwn

./: conftest.py  setup.cfg
data/: complex.py  data_loading.py  dummy_complexes.py  test_batching.py  test_dataset.py  test_utils.py  utils.py
data/datasets/: __init__.py  cluster.py  csl.py  dataset.py  dummy.py  flow.py  flow_utils.py  ocean.py  ocean_utils.py  ogb.py  plot_flow_dataset.py  plot_ringtree_dataset.py  ringlookup.py  ringtransfer.py  sr.py  test_flow.py  test_ocean.py  test_ringtransfer.py  test_zinc.py  tu.py  zinc.py
exp/: count_rings.py  evaluate_sr_cwn_emb_mag.py  parser.py  run_exp.py  run_mol_exp.py  run_tu_exp.py  run_tu_tuning.py  test_run_exp.py  test_sr.py  train_utils.py
mp/: cell_mp.py  graph_models.py  layers.py  models.py  molec_models.py  ring_exp_models.py  test_cell_mp.py  test_layers.py  test_models.py  test_orientation.py  test_permutation.py
