[metadata]
name = cwn 
version = 0.0.1
author = "geometric learning team I guess"
author_email = example@example.com
description = CWN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/twitter-research/cwn
project_urls =
    Bug Tracker = https://github.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    cwn = . 
python_requires = >=3.6

[options.packages.find]
where = .
